# codex-accounts

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
scripts/: install_local.sh  link_local_bin.sh
src/codex_accounts/: cli.py
