[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-accounts"
version = "0.1.0"
description = "Codex multi-account switcher for terminal workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "xinle" }]
dependencies = []

[project.scripts]
codex-accounts = "codex_accounts.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
